--- a/frontend/src/main/kotlin/se/iimetra/dataflowgram/home/home.scss
+++ b/frontend/src/main/kotlin/se/iimetra/dataflowgram/home/home.scss
@@ -18,6 +18,8 @@ html, body {
 }
 
 .home-left {
+  display: inline-block;
+  min-width: 100%;
   background-color: white;
   border-radius: 10px;
   padding: 2rem 2rem;
@@ -34,9 +36,11 @@ html, body {
 }
 
 .home-right {
+  min-width: 100%;
   background-color: white;
   border-radius: 10px;
   padding: 2rem 2rem;
+  display: inline-block;
 
   &__title {
     text-align: center;
@@ -51,4 +55,8 @@ html, body {
 
 .blocked__true {
   pointer-events: none;
+}
+
+.container-scroll {
+  overflow-x: scroll;
 }
