--- a/frontend/src/main/kotlin/se/iimetra/dataflowgram/home/diagram/editor/configurer.scss
+++ b/frontend/src/main/kotlin/se/iimetra/dataflowgram/home/diagram/editor/configurer.scss
@@ -155,3 +155,12 @@ $blue_color: rgb(0, 192, 255);
 .descr-span {
   margin-left: 2rem;
 }
+
+.dia-mega {
+  margin-left: -1rem;
+  margin-top: 0.5rem;
+}
+
+.dia-mega-2 {
+  display: flex;
+}
