--- a/frontend/src/main/kotlin/se/iimetra/dataflowgram/home-diagram-styles.scss
+++ b/frontend/src/main/kotlin/se/iimetra/dataflowgram/home-diagram-styles.scss
@@ -1,5 +1,5 @@
 .srd-demo-workspace {
-    background: black;
+    background: #dfdfdf;
     display: flex;
     flex-direction: column;
     height: 100vh;
@@ -45,16 +45,31 @@
     margin-bottom: 20px;
 }
 
+path {
+    stroke: rgba(0, 0, 0, 0.5);
+}
 .srd-demo-canvas {
     height: 100vh;
     width: 100%;
     min-height: 300px;
     min-width: 300px;
-    background-color: #3c3c3c !important;
-    background-image: linear-gradient(0deg, transparent 24%, rgba(255, 255, 255, 0.05) 25%, rgba(255, 255, 255, 0.05) 26%, transparent 27%, transparent 74%, rgba(255, 255, 255, 0.05) 75%, rgba(255, 255, 255, 0.05) 76%, transparent 77%, transparent), linear-gradient(90deg, transparent 24%, rgba(255, 255, 255, 0.05) 25%, rgba(255, 255, 255, 0.05) 26%, transparent 27%, transparent 74%, rgba(255, 255, 255, 0.05) 75%, rgba(255, 255, 255, 0.05) 76%, transparent 77%, transparent);
+    background-color: #f7f7f7 !important;
+    background-image: linear-gradient(0deg, transparent 24%, rgba(26, 26, 26, 0.05) 25%, rgba(26, 26, 26, 0.05) 26%, transparent 27%, transparent 74%, rgba(26, 26, 26, 0.05) 75%, rgba(26, 26, 26, 0.05) 76%, transparent 77%, transparent), linear-gradient(90deg, transparent 24%, rgba(26, 26, 26, 0.05) 25%, rgba(26, 26, 26, 0.05) 26%, transparent 27%, transparent 74%, rgba(26, 26, 26, 0.05) 75%, rgba(26, 26, 26, 0.05) 76%, transparent 77%, transparent);
     background-size: 50px 50px;
 
     .pointui {
-        fill: rgba(255, 255, 255, 0.5);
+        fill: rgba(8, 6, 255, 0.5);
     }
+}
+
+.home-left {
+    border-style: solid;
+}
+
+.scene {
+    border-style: solid;
+}
+
+.palette__block {
+    border-style: solid;
 }
