--- a/frontend/src/main/kotlin/se/iimetra/dataflowgram/home/diagram/editor/configurer.scss
+++ b/frontend/src/main/kotlin/se/iimetra/dataflowgram/home/diagram/editor/configurer.scss
@@ -133,6 +133,8 @@ $blue_color: rgb(0, 192, 255);
   max-width: 100rem;
   min-width: 40rem;
   min-height: 20rem;
+  resize: both;
+  overflow: auto;
 
   pre {
     min-height: 20rem;
@@ -163,4 +165,23 @@ $blue_color: rgb(0, 192, 255);
 
 .dia-mega-2 {
   display: flex;
+}
+
+.iframe-gl {
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.inner-img {
+  max-width: 98%;
+  max-height: 98%;
+}
+
+#popover-content {
+  width: 100%;
+  height: 100%;
+}
+
+.node.srd-node {
+  display: table;
 }
